fix: font's letter spacing

--- a/src/styles/blocks/filter/__option/filter__option.scss
+++ b/src/styles/blocks/filter/__option/filter__option.scss
@@ -3,6 +3,7 @@
   cursor: pointer;
   font-size: 14px;
   color: #192024;
+  letter-spacing: -1px;
   &:not(:last-child) {
     margin-right: 24px;
   }
