--- a/src/styles/blocks/filter/__title/filter__title.scss
+++ b/src/styles/blocks/filter/__title/filter__title.scss
@@ -1,3 +1,6 @@
 .filter__title {
   margin: 0 0 23px;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: -1.3px;
 }
