--- a/src/styles/blocks/section/__title/section__title.scss
+++ b/src/styles/blocks/section/__title/section__title.scss
@@ -3,5 +3,5 @@
   font-family: 'HelveticaNeueMedium', Verdana, sans-serif;
   font-weight: 900;
   font-size: 44px;
-  letter-spacing: -4.1px;
+  letter-spacing: -4.2px;
 }
